# spacefree

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  config.rs  delete.rs  error.rs  log.rs  main.rs  scan.rs  storage.rs  test.rs
