[package]
name = "spacefree"
version = "0.9.1"
edition = "2024"
authors = ["elemeng"]
description = "Ultra-fast file deletion CLI tool (supports trash)"
readme = "README.md"
homepage = "https://github.com/elemeng/spacefree"
repository = "https://github.com/elemeng/spacefree"
license = "MIT"
keywords = ["cli", "delete", "trash", "cleanup", "files"]
categories = ["command-line-utilities"]
rust-version = "1.85"
build = "build.rs"

[dependencies]
async-stream = "0.3"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
globset = "0.4"
indicatif = "0.18"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
tokio = { version = "1.49", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "time",
    "signal",
] }
trash = "5.2"
walkdir = "2.5"

[features]
default = []
# Platform-specific features (auto-enabled by build.rs)
storage-linux = []
storage-macos = []
storage-windows = []
storage-unknown = []

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "spacefree"
path = "src/main.rs"

[[bin]]
name = "spa"
path = "src/main.rs"
